# jet-lag-the-app

./: .bk.yaml  .dockerignore  .editorconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  Tiltfile  docker-compose.yml  dprint.json  fnox.toml  hk.pkl  mise.toml  renovate.json
.mise/tasks/: dev  (+8 more)
backend/: Dockerfile  README.md  atlas.hcl  mise.toml  pyproject.toml  ruff.toml  sqlc.yaml
backend/.mise/tasks/: clean  codegen  db-diff  db-reset  db-status  deps  lint  lint-fix  migrate  start  test  test-ci  test-cov  typecheck
backend/db/: schema.sql
backend/db/migrations/: 20260413220908_shortlink_created_by_email.sql  20260413222120_shortlink_creator_fk.sql  atlas.sum
backend/db/query/: curses.sql  games.sql  players.sql  rounds.sql  shortlinks.sql  users.sql
backend/scripts/: dprint-python-wrapper.sh
backend/src/jetlag/: __init__.py  config.py  logging.py  main.py
backend/src/jetlag/api/: deps.py
backend/src/jetlag/api/routes/: auth.py  curses.py  games.py  leaderboard.py  shortlinks.py
backend/src/jetlag/api/ws/: game_sync.py
backend/src/jetlag/core/: connection_manager.py  curse_engine.py  game_engine.py
backend/src/jetlag/db/: database.py  engine.py
backend/src/jetlag/models/: curse.py  game.py  player.py  round.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_api.py  test_curses_api.py  test_games_api.py  test_leaderboard_api.py  test_shortlinks_api.py
backend/tests/unit/: test_auth_models.py  test_curse_engine.py  test_game_engine.py  test_models.py  test_shortlink_href.py
backend/tests/ws/: test_game_sync.py
(+75 files in other folders)
